--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "eslint-plugin-node": "^8.0.1",
     "htmllint": "^0.7.3",
     "htmllint-cli": "0.0.7",
-    "http-server": "^0.11.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "rimraf": "^2.6.3",
@@ -53,5 +52,8 @@
       "post-commit": "git update-index --again",
       "pre-commit": "lint-staged"
     }
+  },
+  "dependencies": {
+    "http-server": "^0.9.0"
   }
 }
